--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
     <main>Main Content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul id="footer-links">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/fadb375f06.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
