--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!-- Main content-->
     <main>
+        <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
                 <h2>Love Running</h2>
@@ -49,6 +50,7 @@
             </div>
         </section>
 
+        <!-- Reasons section -->
         <section id="reasons">
             <h2>Why love running with us?</h2>
             <div id="benefits">
@@ -81,6 +83,48 @@
                 </div>
                 <div id="benefits-image">
                     <div id="circle-cover-bg"></div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Meetup times section -->
+        <section id="meetups">
+            <h2>Meet-up Times</h2>
+            <div id="times">
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Monday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Wednesday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Friday</p>
+                    <p>5K</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>09:30</p>
+                </div>
+                <div>
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Sunday</p>
+                    <p>0K</p>
+                    <p>The Marker Hotel</p>
+                    <p>11:30</p>
                 </div>
             </div>
         </section>
