Style: Add background-image and styling to Sign-Up form

--- a/signup.html
+++ b/signup.html
@@ -68,6 +68,8 @@
                         <label for="Both">Both</label>
                         <input type="radio" id="both" name="running_preference" value="both">
                     </div>
+                </div>
+                <div>
                     <button type="submit" class="join-button">Let's Run!</button>
                 </div>
             </form>
