Fix: Make label value for both all lowercaps to match id

--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
                         <input type="radio" id="trail" name="running_preference" value="trail">
                     </div>
                     <div>
-                        <label for="Both">Both</label>
+                        <label for="both">Both</label>
                         <input type="radio" id="both" name="running_preference" value="both">
                     </div>
                 </div>
